examples/test/testpolicy4307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4307
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key40: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value27
      podSelector:
        matchLabels:
          key48: value44
          key19: value39
          key31: value10
